--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,5 +9,5 @@ html, body {
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
-  background-color: #ddd;
+  background-color: #efebff;
 }
