--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,24 @@
-<div *ngIf="auth.user$ | async as user">
+
+<ng-template #sign>
+  <mat-card class="login-form">
+    <mat-tab-group mat-stretch-tabs>
+
+      <mat-tab label="Logowanie">
+        Formularz logowanei
+      </mat-tab>
+      <mat-tab label="Rejestracja">
+        Formularz rejestracja
+
+      </mat-tab>
+
+    </mat-tab-group>
+  </mat-card>
+</ng-template>
+
+
+<div *ngIf="auth.user$ | async as user; else sign">
   <pre>
     {{ user | json }}
   </pre>
 </div>
+
