--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -1,1 +1,14 @@
-<p>chat works!</p>
+
+<ng-container *ngIf="chat$ | async as chat">
+
+  <article *ngFor="let msg of chat.messages">
+    <p>
+      <b> {{ msg.user?.email }}</b> : {{ msg.message }}
+    </p>
+  </article>
+  <div class="form">
+    <input class="input" [(ngModel)]="newMessage" maxlength="100" (keydown.enter)="submit(chat.id)">
+
+    <button (click)="submit(chat.id)" class="button is-info" [disabled]="!newMessage">Send</button>
+  </div>
+</ng-container>
