--- a/src/app/components/signin/signin.component.html
+++ b/src/app/components/signin/signin.component.html
@@ -20,7 +20,7 @@
            formControlName="password"
            required>
 
-    <button mat-icon-button matSuffix
+    <button mat-icon-button matSuffix type="button"
             (click)="passwordHide = !passwordHide"
             [attr.aria-label]="'Ukryj hasło'"
             [attr.aria-pressed]="passwordHide">
